tests/baselines/reference/project/declareVariableCollision/node/declareVariableCollision.errors.txt
in2.d.ts(1,1): error TS2440: Import declaration conflicts with local declaration of 'A'.


==== decl.d.ts (0 errors) ====
    // bug 535531: duplicate identifier error reported for "import" declarations in separate files
    
    declare module A
    {
    
        class MyRoot { }
    
        export module B
        {
            class MyClass{ }
        }
    }
==== in1.d.ts (0 errors) ====
    import a = A;
==== in2.d.ts (1 errors) ====
    import a = A;
    ~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'A'.